[project]
name = "deepguessr"
version = "0.1.0"
description = "GeoGuessr bot using deep learning for automated gameplay"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "matplotlib",
    "requests",
    "python-dotenv",
    "opencv-python",
    "pillow",
    "numpy",
    "playwright",
    "playwright-stealth>=2.0.3",
    "pandas>=2.3.3",
    "aiohttp>=3.14.0",
    "streetlevel>=0.12.8",
]

